RESOLVED FIXED113234
Compile without SVG will fail
https://bugs.webkit.org/show_bug.cgi?id=113234
Summary Compile without SVG will fail
Adenilson Cavalcanti Silva
Reported 2013-03-25 12:45:25 PDT
Patch on changeset http://trac.webkit.org/changeset/146760 introduced the use of a SVG class into InspectorCSSAgent. Trying to compile WebKit without svg (--no-svg) will fail with: /******************************************************************************************/ [ 11%] Building CXX object Source/WebCore/CMakeFiles/webcore_efl.dir/inspector/InspectorCSSAgent.cpp.o /home/adenilson/apps/webkit/Webkit/Source/WebCore/inspector/InspectorCSSAgent.cpp: In member function ‘WebCore::InspectorStyleSheet* WebCore::InspectorCSSAgent::viaInspectorStyleSheet(WebCore::Document*, bool)’: /home/adenilson/apps/webkit/Webkit/Source/WebCore/inspector/InspectorCSSAgent.cpp:1093:37: error: expected type-specifier before ‘SVGStyleElement’ /home/adenilson/apps/webkit/Webkit/Source/WebCore/inspector/InspectorCSSAgent.cpp:1093:37: error: expected ‘>’ before ‘SVGStyleElement’ /******************************************************************************************/ This patch adds a test for SVG module in the new code.
Attachments
Test if we have SVG support built before casting block. (1.79 KB, patch)
2013-03-25 12:53 PDT, Adenilson Cavalcanti Silva
no flags
Adenilson Cavalcanti Silva
Comment 1 2013-03-25 12:53:07 PDT
Created attachment 194907 [details] Test if we have SVG support built before casting block.
Tony Chang
Comment 2 2013-03-25 13:14:29 PDT
*** Bug 113237 has been marked as a duplicate of this bug. ***
WebKit Review Bot
Comment 3 2013-03-25 13:16:49 PDT
Comment on attachment 194907 [details] Test if we have SVG support built before casting block. Clearing flags on attachment: 194907 Committed r146803: <http://trac.webkit.org/changeset/146803>
WebKit Review Bot
Comment 4 2013-03-25 13:16:52 PDT
All reviewed patches have been landed. Closing bug.
Alexander Pavlov (apavlov)
Comment 5 2013-03-26 02:02:28 PDT
Comment on attachment 194907 [details] Test if we have SVG support built before casting block. r=me. Thanks for fixing this.
Alexander Pavlov (apavlov)
Comment 6 2013-03-26 02:04:26 PDT
Comment on attachment 194907 [details] Test if we have SVG support built before casting block. Oops. For some reason, savagobr@yahoo.com restored the r? cq? flags on a committed patch. Resetting.
Note You need to log in before you can comment on or make changes to this bug.