Compile without SVG will fail https://bugs.webkit.org/show_bug.cgi?id=113234

Patch by Adenilson Cavalcanti <cavalcantii@gmail.com> on 2013-03-25
Reviewed by Timothy Hatcher.

Only make the cast to SVGStyleElement if we have SVG support built.

* inspector/InspectorCSSAgent.cpp:
(WebCore::InspectorCSSAgent::viaInspectorStyleSheet):

Canonical link: https://commits.webkit.org/131563@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146803 268f45cc-cd09-0410-ab3c-d52691b4dbfc