Source/WebCore/inspector/InspectorCSSAgent.cpp
@@ -1089,8 +1089,10 @@ InspectorStyleSheet* InspectorCSSAgent::viaInspectorStyleSheet(Document* documen
     CSSStyleSheet* cssStyleSheet = 0;
     if (styleElement->isHTMLElement())
         cssStyleSheet = static_cast<HTMLStyleElement*>(styleElement.get())->sheet();
+#if ENABLE(SVG)
     else if (styleElement->isSVGElement())
         cssStyleSheet = static_cast<SVGStyleElement*>(styleElement.get())->sheet();
+#endif
 
     if (!cssStyleSheet)
         return 0;
